--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,7 @@
     "type": "project",
     "autoload": {
         "psr-4": {
-            "Paldi\\Test\\": "src/"
+            "Paldi\\Test\\": "src"
         }
     },
     "authors": [
