--- a/composer.json
+++ b/composer.json
@@ -21,5 +21,10 @@
 		"psr-4":{
 			"Paldi\\Test\\": "tests"
 		}
-	}
+	},
+    "scripts":{
+        "test" : "phpunit --configuration phpunit.xml",
+        "test:product" : "phpunit --configuration phpunit.xml --testsuite product",
+        "test:counter" : "phpunit --configuration phpunit.xml --testsuite counter"
+    }
 }
